// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`globalAlert > renders correctly with all variants > renders correctly variant danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="danger"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant info 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant promotional 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="promotional"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
        <button
          class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_white__e1wcoef styles_undefined_compound_8__e1wcoet"
          type="button"
        >
          Button
        </button>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with children as component 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          Simple GlobalAlert
        </p>
      </div>
      <button
        class="emotion-2 emotion-3 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with link 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-0 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-2 .e1afnb7a3,
.emotion-2 .e1afnb7a2,
.emotion-2 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-2>* {
  pointer-events: none;
}

.emotion-2:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-2:hover,
.emotion-2:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.emotion-2:hover .e1afnb7a3,
.emotion-2:focus .e1afnb7a3,
.emotion-2:hover .e1afnb7a2,
.emotion-2:focus .e1afnb7a2,
.emotion-2:hover .e1afnb7a4,
.emotion-2:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-2:hover:visited,
.emotion-2:focus:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-2[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-2:hover::after,
.emotion-2:focus::after {
  background-color: #005da3;
}

.emotion-2:active {
  text-decoration-thickness: 2px;
}

.emotion-4 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background: none;
}

.emotion-4 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-4:hover,
.emotion-4:focus,
.emotion-4:active {
  background: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_justifyContent_center_xxsmall__toi52u5j"
      data-variant="info"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52u3d styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u7d styles_gap_1rem_xxsmall__toi52ud styles_justifyContent_center_xxsmall__toi52u5j"
      >
        <p
          class="style__m4c9ow0 style_strikeThrough_false__m4c9ow2 style_italic_false__m4c9ow4 style_underline_false__m4c9ow6 style_oneLine_false__m4c9ow8 style_sentiment_white__m4c9owh style_prominence_default__m4c9owi style_variant_bodySmall__m4c9own style_disabled_false__m4c9ow1b style_undefined_compound_32__m4c9ow28 style_undefined_compound_72__m4c9ow3c"
        >
          This is a 
          <a
            class="emotion-2 emotion-3"
            data-variant="inline"
            href="scaleway.com"
            prominence="strong"
            variant="bodySmallStrong"
          >
            Global Alert
          </a>
            link
        </p>
      </div>
      <button
        class="emotion-4 emotion-5 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
